--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "core-js": "^2.4.1",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
