--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
+    "ngx-bootstrap": "^2.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^5.5.2",
