--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.3",
-    "@angular/cdk": "^5.1.1",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
-    "@angular/material": "^5.1.1",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
-    "ngx-bootstrap": "^2.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^5.5.2",
