--- a/package.json
+++ b/package.json
@@ -25,16 +25,15 @@
     "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
-    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^3.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
