--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
