--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
+    "multer": "^1.3.0",
     "ng2-toastr": "^4.1.2",
     "ngx-cookie-service": "^1.0.10",
     "passport": "^0.4.0",
