--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.3.0",
     "ng2-toastr": "^4.1.2",
     "ngx-cookie-service": "^1.0.10",
+    "ngx-pagination": "^3.0.3",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "rxjs": "^5.5.2",
